# clockify_manager

./: .gitignore  README.md  angular.json  package-lock.json  package.json
.github/workflows/: main.yml  release_builds.yml
src/: index.html  styles.scss  theme.scss
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: error.rs  lib.rs
src-tauri/src/commands/: clockify.rs  config.rs  holidays.rs  mod.rs  overtime.rs  test.rs
src-tauri/src/models/: clockify.rs  config.rs  holiday.rs  mod.rs  overtime.rs
src-tauri/src/services/: clockify_service.rs  config_service.rs  holiday_service.rs  mod.rs  overtime_service.rs
src-tauri/src/utils/: date_utils.rs
src/app/: app.component.scss  app.component.spec.ts  app.component.ts  app.routes.ts
src/app/core/guards/: config.guard.ts
src/app/core/models/: clockify.model.ts  config.model.ts  holiday.model.ts  overtime.model.ts
src/app/core/services/: clockify.service.ts  config.service.ts  dialog.service.ts  holiday.service.ts  overtime-export.service.ts  overtime.service.ts  tauri.service.ts  theme.service.ts
src/app/features/configuration/: configuration-routing.module.ts  configuration.module.ts
src/app/features/dashboard/: dashboard-routing.module.ts  dashboard.module.ts
src/app/features/vacation-management/: vacation-management-routing.module.ts  vacation-management.module.ts
src/app/shared/: shared.module.ts
src/app/test-components/: test-app.component.html  test-app.component.scss  test-app.component.ts
(+35 files in other folders)
