[package]
name = "clockify-overtime-tracker"
version = "0.1.0"
description = "German overtime tracking with Clockify API integration"
authors = ["Your Company"]
license = "MIT"
repository = ""
edition = "2021"
rust-version = "1.77.2"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
name = "app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2.4.1", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
log = "0.4"
tauri = { version = "2.8.5", features = [] }
tauri-plugin-log = "2"

# HTTP client for Clockify API
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }

# Async runtime
tokio = { version = "1.42", features = ["full"] }

# Date and time handling
chrono = { version = "0.4", features = ["serde"] }

# UUID generation for vacation ranges
uuid = { version = "1.11", features = ["v4", "serde"] }

# Error handling
anyhow = "1.0"
thiserror = "2.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
